tests/baselines/reference/parserForStatement7.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Statements/parserForStatement7.ts (3 errors) ====
    for (new foo() in b) {
         ~~~~~~~~~
!!! error TS2405: The left-hand side of a 'for...in' statement must be of type 'string' or 'any'.
             ~~~
!!! error TS2304: Cannot find name 'foo'.
                      ~
!!! error TS2304: Cannot find name 'b'.
    }